# open-geo

./: .gitignore  CLAUDE.md  LICENSE  README.ar.md  README.md  README.ru.md  README.zh.md  RECENT_CHANGES.md  ROADMAP.md  conftest.py  pyproject.toml  requirements.txt
.claude/: launch.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/agents/: capture-worker.md  harvest-worker.md
.claude/skills/bug-hunt/: SKILL.md
.claude/skills/doc-sync/: SKILL.md
.claude/skills/open-geo/: SKILL.md
.github/workflows/: ci.yml
dashboard/: README.md  api.py  seed_fixture.py
dashboard/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
dashboard/web/.claude/: launch.json
dashboard/web/src/redesign/: RedesignApp.test.tsx  RedesignApp.tsx  main.tsx  theme.css  tsconfig.json
dashboard/web/src/redesign/components/: LensBreakdown.test.tsx  MetricCard.tsx  (+13 more)
data/: .gitkeep
docs/: docs.json  git-remote-setup.md  node-version-pinning.md  sandbox-python-nodejs-setup.md
engines/: README.md  chatgpt_search.md  claude_search.md  deepseek.md  gemini.md  google.md  perplexity.md  yandex_neuro.md
examples/: questions.csv
fonts/: README.md  build.py
harvest/: build.py
i18n/: README.md  ar.json  en.json  locales.json  ru.json  zh.json
pipeline/: INTERFACES.md  aggregate.py  db.py  ingest.py  lens_sentiment.py  schema.py  seed_demo.py
report/: _selftest_fixture.py  generate.py  i18n.py  textshape.py
reports/: .gitkeep
scripts/: setup.sh
tests/: test_aggregate.py  test_api.py  test_db.py  test_domain_stats.py  test_fixtures.py  test_ingest.py  test_lens_sentiment.py  test_pipeline.py  test_report_format.py  test_report_i18n.py  test_report_render.py  test_schema.py  test_seed_demo.py
(+12 files in other folders)
